Fixed bugs while add or edit a recipe

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,6 @@
     <string name="instructions_label">Instructions</string>
     <string name="category_label">Category</string>
 
+    <string name="new_category_label">New name</string>
+
 </resources>
