--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -33,4 +33,6 @@
     <string name="ingredients_label">Інгредієнти</string>
     <string name="instructions_label">Інструкціїї</string>
     <string name="category_label">Категорія</string>
+
+    <string name="new_category_label">Нова назва</string>
 </resources>
