--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,12 +16,15 @@
     <string name="rate_us">Rate us</string>
     <string name="fount_problem">Found problem?</string>
     <string name="title_activity_add_note">AddNoteActivity</string>
+    <string name="g_to_mg">Grams to milligrams</string>
 
     <!-- Hint texts -->
     <string name="note_title_hint">title</string>
     <string name="note_category_hint">category</string>
     <string name="note_ingredients_hint">ingredients</string>
     <string name="note_instructions_hint">instructions</string>
+    <string name="pressure_g">g</string>
+    <string name="pressure_mg">mg</string>
 
     <string name="add_note_btn">OK</string>
     <string name="title_activity_get_image">GetImageActivity</string>
